[gd_scene load_steps=4 format=3 uid="uid://b5y7myf612gy0"]

[ext_resource type="Script" path="res://Scenes/JeremyScenes/Enemies/feather.gd" id="1_gfi7k"]
[ext_resource type="Texture2D" uid="uid://6pqbm7gjjeoc" path="res://Assets/JeremyAssets/brown_feather.png" id="2_dkqr7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bihxc"]
size = Vector2(12, 22.0208)

[node name="Feather" type="Area2D" groups=["Attack"]]
rotation = 2.35619
collision_layer = 2
collision_mask = 0
script = ExtResource("1_gfi7k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.714466, 0.714466)
rotation = -0.785398
shape = SubResource("RectangleShape2D_bihxc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_dkqr7")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="DisableHitboxTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="CooldownTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DisableHitboxTimer" to="." method="_on_disable_hitbox_timer_timeout"]
